tests/ui/using-for/attached_functions.stderr
error: attached function `inc` can only be called
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.inc;
   ╰╴          ━━━

error: attached function `pick` can only be called
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.pick;
   ╰╴          ━━━━

error: wrong argument count for function call: 1 arguments given but expected 0
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.inc(1);
   │         ━━━━━┬──
   │              │
   ╰╴             expected 0 arguments, found 1

error: wrong argument count for function call: 0 arguments given but expected 1
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.add();
   │         ━━━━━┬─
   │              │
   ╰╴             expected 1 argument, found 0

error: aborting due to 4 previous errors

